# software-development-environment

./: CMakeLists.txt  CMakePresets.json  README.md  rebuild_all.py  tool_invoker.py
avr32/: CMakeLists.txt
cmake/avr32/: CMakeLists.txt
cmake/tests/: CMakeLists.txt
cmake/utilities/: .clang-format
tests/: CMakeLists.txt
